hphp/hack/test/typecheck/shapes_cc_13.php.exp
File "shapes_cc_13.php", line 6, characters 14-15:
A shape field name cannot be an empty string (Typing[4136])
